@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.541 2012/06/16 15:10:48 taca Exp $
+# $NetBSD: Makefile,v 1.542 2012/07/04 17:59:21 drochner Exp $
 #
 
 COMMENT=	System utilities
@@ -68,6 +68,7 @@ SUBDIR+=	daemontools
 SUBDIR+=	dbus
 SUBDIR+=	dbus-glib
 SUBDIR+=	dbus-qt3
+SUBDIR+=	dc-tools
 SUBDIR+=	dd_rescue
 SUBDIR+=	dd_rhelp
 SUBDIR+=	ddrescue
